# doodle

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py
client/: __main__.py  app.py  constants.py  geometry.py  network.py  state.py  strokes.py  ui.py
server/: __main__.py  handler.py  images.py  presidents.py  state.py  transitions.py
tests/: conftest.py
tests/client/: test_app.py  test_geometry.py  test_state.py  test_strokes.py
tests/server/: test_handler.py  test_images.py  test_state.py  test_transitions.py
